actualizacion de info about us

--- a/css/main.css
+++ b/css/main.css
@@ -2274,13 +2274,16 @@ html.no-csstransitions .home-content__main {
 
 .stats__count {
     font-family: "montserrat-bold", sans-serif;
-    font-size: 8.4rem;
+    font-size: 5.4rem;
     line-height: 1;
     color: #FFFFFF;
     position: relative;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+.imgdesc{
+    border-radius: 30px;
 }
 
 .stats h5 {
