--- a/css/main.css
+++ b/css/main.css
@@ -2250,6 +2250,10 @@ html.no-csstransitions .home-content__main {
     text-align: center;
     max-width: 1024px;
 }
+.productimg{
+    height: 300px;
+    width: px;
+}
 
 
 /* ------------------------------------------------------------------- 
